--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.6",
+    "classnames": "^2.3.1",
+    "firebase": "^9.6.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-code-blocks": "0.0.9-0",
+    "react-countdown": "^2.3.2",
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5"
   },
   "devDependencies": {
     "eslint": "8.5.0",
